--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <div class="p-4 bg-slate-50 rounded-lg shadow-sm">
                             <h4 class="font-semibold text-lg mb-2 text-slate-800">Output/Deliverable</h4>
                             <ul class="list-disc pl-5 text-sm space-y-2 text-slate-700">
-                                <li>Comprehensive <strong>Actor Map</strong>.</li>
+                                <li>Comprehensive <strong>Problem Ecosystem Map</strong>.</li>
                                 <li><strong>Affinity Diagrams</strong> and data synthesis.</li>
                                 <li>Initial <strong>Problem Hypotheses</strong>.</li>
                             </ul>
