--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
                         <div class="p-4 bg-slate-50 rounded-lg shadow-sm">
                             <h3 class="font-bold text-lg mb-2 text-slate-800">Why "Triple"?</h3>
-                            <p>Complex social problems are "wicked problems"—ill-defined, interconnected, and resistant to simple solutions. The third diamond is crucial to ensure the solution is equitable, ethical, and sustainable.</p>
+                            <p>Complex social problems are "wicked problems"—ill-defined, interconnected, and resistant to simple solutions. The third diamond is key to ensuring that the solution is equitable, ethical, and sustainable.</p>
                         </div>
                         <div class="p-4 bg-slate-50 rounded-lg shadow-sm">
                             <h3 class="font-bold text-lg mb-2 text-slate-800">Social Impact Goal</h3>
@@ -100,7 +100,7 @@
                             <span class="text-purple-600 text-2xl font-bold">2.</span>
                             <div>
                                 <h4 class="font-semibold text-lg text-slate-800">Collaboration</h4>
-                                <p class="text-sm">Co-design with affected stakeholders, bringing together diverse perspectives (e.g., policy, non-profit, community members).</p>
+                                <p class="text-sm">Co-design with affected individuals/groups, bringing together diverse perspectives (e.g., policy, non-profit, community members).</p>
                             </div>
                         </div>
                         <div class="flex items-start gap-4 p-4 bg-slate-50 rounded-lg shadow-sm">
