--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                 </ul>
             </div>
             
-            <!-- Card 3: Phase 3 - Ideate (Wk 3) -->
+            <!-- Card 3: Phase 3 - Ideation (Wk 3) -->
             <div class="flex-shrink-0 w-full md:w-80 min-w-[300px] snap-start bg-white rounded-xl shadow-xl p-6 transform hover:scale-[1.02] transition-transform duration-300">
                 <p class="text-sm font-medium text-[#A38F6A] mb-1">Week 3 (Nov 13)</p>
-                <h2 class="text-2xl font-bold mb-3" style="color: #8C1D40;">Phase 3: Ideate</h2>
+                <h2 class="text-2xl font-bold mb-3" style="color: #8C1D40;">Phase 3: Ideation</h2>
                 <p class="mb-4 text-gray-700">A period of <strong>Divergent Thinking</strong>, generating a large quantity of diverse and creative solution ideas to the defined problem statement before converging on a single concept.</p>
                 <h3 class="text-lg font-semibold mb-2" style="color: #A38F6A;">Key Activities</h3>
                 <ul class="list-disc list-inside text-gray-700 space-y-1 text-sm">
