--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </section>
 
         <!-- Horizontal Scrolling Cards Section -->
-        <h2 class="text-3xl font-bold mb-6 pt-4" style="color: #8C1D40;">Design Thinking Phases in Detail</h2>
+        <h2 class="text-3xl font-bold mb-6 pt-4" style="color: #8C1D40;">Weekly Plan</h2>
         
         <!-- Scrolling Container -->
         <main class="flex overflow-x-scroll pb-6 md:pb-10 space-x-6 px-2 horizontal-scroll-container snap-x snap-mandatory">
