--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 
         <section class="mb-12">
             <p class="text-lg text-center max-w-4xl mx-auto mb-10">
-                This project visualizes the six-week process for undergraduate teams tackling the "iSense challenge." The workflow strictly follows the five phases of Design Thinking, progressing from deep user understanding to tangible prototyping and a final presentation.
+                This project visualizes the six-week process for undergraduate teams tackling the "iSense challenge." The workflow follows the five phases of Design Thinking, progressing from deep user understanding to tangible prototyping, testing, and a final presentation.
             </p>
             
             <div class="w-full bg-white rounded-lg shadow-2xl p-6">
                 <h2 class="text-3xl font-semibold text-center mb-6" style="color: #8C1D40;">Project Phases & Duration</h2>
-                <p class="text-center text-gray-700 mb-4">The core project timeline is organized by Design Thinking phases, showing exact week numbers and the associated dates for each activity. The timeline progresses chronologically from bottom to top.</p>
+                <p class="text-center text-gray-700 mb-4">The core project timeline is organized by Design Thinking phases with associated dates for each activity. The timeline progresses chronologically.</p>
                 
                 <div class="chart-container" style="max-width: 100%; margin: 0 auto;">
                     <canvas id="ganttChart"></canvas>
