--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="flex-shrink-0 w-full md:w-80 min-w-[300px] snap-start bg-white rounded-xl shadow-xl p-6 transform hover:scale-[1.02] transition-transform duration-300">
                 <p class="text-sm font-medium text-[#A38F6A] mb-1">Weeks 5-6 (Nov 21 - Dec 4)</p>
                 <h2 class="text-2xl font-bold mb-3" style="color: #8C1D40;">Phase 5: Test & Pitch</h2>
-                <p class="mb-4 text-gray-700">The final phase involves <strong>structured peer-to-peer testing</strong>, iterative refinement, and culminating in the final Pitch-A-Thon presentation to the stakeholders.</p>
+                <p class="mb-4 text-gray-700">The final phase involves <strong>structured peer-to-peer testing</strong>, iterative refinement, and culminating in the final Pitch-A-Thon presentation.</p>
                 <h3 class="text-lg font-semibold mb-2" style="color: #A38F6A;">Key Activities</h3>
                 <ul class="list-disc list-inside text-gray-700 space-y-1 text-sm">
                     <li>"I Like / I Wish / What If" Feedback</li>
