--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             
             <!-- Card 1: Phase 1 - Empathize (Wk 1) -->
             <div class="flex-shrink-0 w-full md:w-80 min-w-[300px] snap-start bg-white rounded-xl shadow-xl p-6 transform hover:scale-[1.02] transition-transform duration-300">
-                <p class="text-sm font-medium text-[#A38F6A] mb-1">Week 1 (Oct 30)</p>
+                <p class="text-sm font-medium text-[#A38F6A] mb-1">Week 1 (Nov 4 - 6)</p>
                 <h2 class="text-2xl font-bold mb-3" style="color: #8C1D40;">Phase 1: Empathize / Discover</h2>
                 <p class="mb-4 text-gray-700">The initial step focuses on <strong>deep user immersion</strong> and understanding the patient's world. Teams work to step into the user's shoes and collect rich qualitative data.</p>
                 <h3 class="text-lg font-semibold mb-2" style="color: #A38F6A;">Key Activities</h3>
@@ -103,7 +103,7 @@
 
             <!-- Card 2: Phase 2 - Define (Wk 2) -->
             <div class="flex-shrink-0 w-full md:w-80 min-w-[300px] snap-start bg-white rounded-xl shadow-xl p-6 transform hover:scale-[1.02] transition-transform duration-300">
-                <p class="text-sm font-medium text-[#8C1D40] mb-1">Week 2 (Nov 6)</p>
+                <p class="text-sm font-medium text-[#8C1D40] mb-1">Week 2 (Nov 11)</p>
                 <h2 class="text-2xl font-bold mb-3" style="color: #8C1D40;">Phase 2: Define</h2>
                 <p class="mb-4 text-gray-700">This phase synthesizes the data collected. Teams shift from raw observations to creating a <strong>clear, actionable problem statement</strong> based on user needs.</p>
                 <h3 class="text-lg font-semibold mb-2" style="color: #A38F6A;">Key Deliverables</h3>
@@ -111,12 +111,8 @@
                     <li>Patient Journey Mapping</li>
                     <li>Refined Point of View (POV) Statement</li>
                     <li>2-3 "How Might We..." Questions</li>
-                </ul>
-            </div>
-            
-            <!-- Card 3: Phase 3 - Ideate (Wk 3) -->
             <div class="flex-shrink-0 w-full md:w-80 min-w-[300px] snap-start bg-white rounded-xl shadow-xl p-6 transform hover:scale-[1.02] transition-transform duration-300">
-                <p class="text-sm font-medium text-[#A38F6A] mb-1">Week 3 (Nov 13)</p>
+                <p class="text-sm font-medium text-[#A38F6A] mb-1">Week 2 (Nov 13)</p>
                 <h2 class="text-2xl font-bold mb-3" style="color: #8C1D40;">Phase 3: Ideate</h2>
                 <p class="mb-4 text-gray-700">A period of <strong>Divergent Thinking</strong>, generating a large quantity of diverse and creative solution ideas to the defined problem statement before converging on a single concept.</p>
                 <h3 class="text-lg font-semibold mb-2" style="color: #A38F6A;">Key Activities</h3>
@@ -127,7 +123,7 @@
                 </ul>
             </div>
 
-            <!-- Card 4: Phase 4 - Prototype (Wk 4) -->
+            <!-- Card 4: Phase 3 - Prototype (Wk 4) -->
             <div class="flex-shrink-0 w-full md:w-80 min-w-[300px] snap-start bg-white rounded-xl shadow-xl p-6 transform hover:scale-[1.02] transition-transform duration-300">
                 <p class="text-sm font-medium text-[#8C1D40] mb-1">Week 4 (Nov 20)</p>
                 <h2 class="text-2xl font-bold mb-3" style="color: #8C1D40;">Phase 4: Prototype</h2>
@@ -140,7 +136,7 @@
                 </ul>
             </div>
 
-            <!-- Card 5: Phase 5 - Test & Pitch (Wks 5-6) -->
+            <!-- Card 5: Phase 4 - Test & Pitch (Wks 5-6) -->
             <div class="flex-shrink-0 w-full md:w-80 min-w-[300px] snap-start bg-white rounded-xl shadow-xl p-6 transform hover:scale-[1.02] transition-transform duration-300">
                 <p class="text-sm font-medium text-[#A38F6A] mb-1">Weeks 5-6 (Nov 21 - Dec 4)</p>
                 <h2 class="text-2xl font-bold mb-3" style="color: #8C1D40;">Phase 5: Test & Pitch</h2>
@@ -184,7 +180,7 @@
                 data: {
                     // Phases are now listed in ascending order
                     labels: [
-                        'Discover & Define (Oct 30 - Nov 6)', 
+                        'Discover & Define (Nov 4 - Nov 6)', 
                         'Ideate (Nov 13)', 
                         'Prototype & Test (Nov 20)', 
                         'Iterate (Nov 21 - Dec 1)', 
