--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <p class="mb-4 text-gray-700">This phase synthesizes the data collected. Teams shift from raw observations to creating a <strong>clear, actionable problem statement</strong> based on user needs.</p>
                 <h3 class="text-lg font-semibold mb-2" style="color: #A38F6A;">Key Deliverables</h3>
                 <ul class="list-disc list-inside text-gray-700 space-y-1 text-sm">
-                    <li>Patient Journey Mapping</li>
+                    <li>Patient Journey Map</li>
                     <li>Refined Point of View (POV) Statement</li>
                     <li>2-3 "How Might We..." Questions</li>
                 </ul>
